fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,20 @@
   display: none !important;
 }
 
-::-webkit-scrollbar {
-  width: 0.75em;
+body::-webkit-scrollbar {
+  width: 0.85em;
   background-color: var(--secondary-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 999px;
+  background: var(--primary-color);
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0.375em rgb(0 0 0 / 30%);
+  -webkit-box-shadow: inset 0 0 0.375em rgb(0 0 0 / 30%);
+  background-color: #fff;
 }
 
 :root{
